[FIX] mass_mailing,mail: fullwidth chatter & spacing
This commit is an adaptation of commit 
`1f39b5f429025b93c6c47adfd792cbfd047c408f` from 16.0 to 16.1

The goal is to remove the borders from the chatter in mass_mailing and
even the spacing.

To do so a new class has been added: `o_ChatterTopbar_borderLeft`
allowing to display borders on the default chatter but setting the
border to none when inside mass_mailing.

To even the spacing a negative margin is applied on first child of
`o_MessageList_separator` to override the `pt-4`. To override the same
weird spacing between the activity box and the topbar, the new variable
`--ActivityBoxView_title-margin` is used. 

When the chatter is in full-width the box-shadow on `Send Message` btn
is cut on the left side, which is why the variable 
`--ChatterContainer-overflow` is introduced to manage the overflow.

For the general spacing issues this commit changes the padding top on
the Select mailing list `label` to be applied only in `sm` screens.
For small screens in mass_mailing, the default padding-left next to
the Send message is set to 0 with the variable
`--ChatterTopbar-padding-left`

Finally to avoid the `o_domain_selector` component's huge size on lg
screen, the class `w-lg-50` has been added.

task-3109579

--- a/addons/mail/static/src/components/chatter/chatter.scss
+++ b/addons/mail/static/src/components/chatter/chatter.scss
@@ -21,6 +21,11 @@
 
 .o_ChatterTopbar_tools {
     padding-right: var(--ChatterTopbar-padding-right, 0);
+    border-bottom: var(--ChatterTopbar-border);
+}
+
+.o_ChatterTopbar_borderLeft {
+    border-left: var(--ChatterTopbar-border);
 }
 
 .o_ChatterTopbar_button {
@@ -40,8 +45,12 @@
 // Style
 // ------------------------------------------------------------------
 
+.o_ActivityBoxView_title {
+    margin-top: var(--ActivityBox_title-margin, #{map-get($spacers, 4)});
+}
+
 .o_ActivityBoxView_titleLine {
-    border-top: $border-width $border-color dashed;
+    border-top: $border-width dashed $border-color;
 }
 
 
